@@ -55,6 +55,7 @@ Version 0.0.4b (in progress)
 * [Added] Laying the groundwork for automated updates.
 * [Fixed] Error when attempting to access roster.php directly.
 * [Changed] Team rosters are no longer automatically deleted when stats are reset.
+* [Fixed] Raw html was not passed properly to generate_psss_team_rosters function.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
